<resources>
    <string name="app_name">MyCookBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_categories">Categories</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_recipes">Recipes</string>
    <string name="categoryTitle">Category Title</string>
    <string name="recipeDesc">Recipe Description</string>
    <string name="recipeTitle">Recipe Title</string>
    <string name="recipeIngredients">Ingredients</string>
    <string name="recipeSteps">Steps</string>
    <string name="ingredientDesc">Ingredient Description</string>
    <string name="stepDesc">Step Description</string>
    <string name="recipeImage">Recipe Image</string>
    <string name="action_share">Share</string>
    <string name="action_starr">Starr</string>
    <string name="step_text"> %1$d. %2$s</string>
</resources>